fix: Minor padding and spacing changes

--- a/client/src/components/toolbox/toolbox.css
+++ b/client/src/components/toolbox/toolbox.css
@@ -9,7 +9,7 @@
 
 @media only screen and (max-width: 600px) {
   .toolboxContainer {
-    padding-top: 20px;
+    padding-top: 10px;
     width: 90vw;
     margin: auto;
   }
